adding mongodb-based auth routines
