# middleware/authorize.js
@@ -1,0 +1,34 @@
+const jwt = require('express-jwt');
+const { secret } = require('../app/config/auth.config');
+const db = require('../models');
+
+module.exports = authorize;
+
+function authorize(roles = []) {
+    // roles param can be a single role string (e.g. Role.User or 'User') 
+    // or an array of roles (e.g. [Role.Admin, Role.User] or ['Admin', 'User'])
+    if (typeof roles === 'string') {
+        roles = [roles];
+    }
+
+    return [
+        // authenticate JWT token and attach user to request object (req.user)
+        jwt({ secret, algorithms: ['HS256'] }),
+
+        // authorize based on user role
+        async (req, res, next) => {
+            const account = await db.account.findById(req.user.id);
+            const refreshTokens = await db.refreshToken.find({ account: account.id });
+
+            if (!account || (roles.length && !roles.includes(account.role))) {
+                // account no longer exists or role not authorized
+                return res.status(401).json({ message: 'Unauthorized' });
+            }
+
+            // authentication and authorization successful
+            req.user.role = account.role;
+            req.user.ownsToken = token => !!refreshTokens.find(x => x.token === token);
+            next();
+        }
+    ];
+}
