# routes/index.js
@@ -8,11 +8,13 @@ var invoiceRouter = require("./invoice");
 var calendarRouter = require("./calendar");
 var yzRouter = require("./yahrzeit");
 var eventRouter = require("./event");
+var accountRouter = require("./account");
 
 router.use("/members", memberRouter);
 router.use("/invoices", invoiceRouter);
 router.use("/calendar", calendarRouter);
 router.use("/yahrzeit", yzRouter);
 router.use("/event", eventRouter);
+router.use("/account", accountRouter);
 
 module.exports = router;
